[gd_scene load_steps=2 format=3 uid="uid://cfgs3e17kybkr"]

[ext_resource type="Script" path="res://scripts/player_script/player_interface.gd" id="1_guycr"]

[node name="PlayerInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_guycr")

[node name="Wepon" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_right = 221.0
offset_bottom = 77.0
theme_override_constants/separation = 20

[node name="WeponParametr" type="Label" parent="Wepon"]
layout_mode = 2
text = "Type Wepon"

[node name="WeponName" type="Label" parent="Wepon"]
layout_mode = 2
text = "Wepon Name"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 188.0
offset_top = 416.0
offset_right = 228.0
offset_bottom = 456.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2
offset_top = 4.0
offset_right = 10.0
offset_bottom = 125.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 70

[node name="HealParametr" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "0
"

[node name="ArmorParametr" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "0"
